Bug 110291 - Vega 64 GPU hang running Space Engineers
Summary: Vega 64 GPU hang running Space Engineers
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Vulkan/radeon (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: mesa-dev
QA Contact: mesa-dev
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-03-31 07:50 UTC by Peter
Modified: 2019-05-02 17:30 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Hang report (318.77 KB, text/plain)
2019-03-31 07:50 UTC, Peter
Details
hack (702 bytes, patch)
2019-05-02 12:16 UTC, Samuel Pitoiset
Details | Splinter Review

Description Peter 2019-03-31 07:50:35 UTC
Created attachment 143821 [details]
Hang report

Space Engineers is causing GPU hangs. It's something about the terrain that does it - playing in space works fine for hours at a time, but starting a new game on a planet hangs in a minute or two.

Terrain is really messed up on planets, so there's probably game or Wine bugs at work too.

Hang report attached. Despite talking about /tmp/radv-trace.txt a lot it didn't actually create this file.


System:

Ryzen 2700X
Vega 64
llvm trunk r357123
mesa-19.0_g893425a607a
kernel 5.0.1
wine-staging 4.5 from https://github.com/lutris/wine
DXVK 1.0.1
Graphics settings: 3840x2160, medium detail
Comment 1 Samuel Pitoiset 2019-04-08 12:18:54 UTC
Is this a recent regression?
Comment 2 Peter 2019-04-11 02:38:15 UTC
Space Engineers only began to run in the last couple of months. I haven't been able to get into the game at all with older LLVM+Mesa versions to test.
Comment 3 Peter 2019-04-28 06:46:23 UTC
The terrain was fixed in the latest Wine-staging update. I was hoping that would fix whatever was upsetting my video card, but sadly not.

I managed to record an apitrace on a Windows machine. Replaying it on my Linux machine causes a hang. I don't know if it's useful.

https://drive.google.com/open?id=1ZrGnO0Nx1nJ5QcjQs-dT4-Cfa0S0ABGM  (550MB)

Now running wine-staging 4.7, kernel 5.0.7, mesa-19.0_g77449d7c41a, llvm-9.0.0_358960, DXVK v1.1-34-g60827c1.
Comment 4 Samuel Pitoiset 2019-05-02 12:16:15 UTC
Created attachment 144128 [details] [review]
hack

Does the attached hack fix the hang for you?
Comment 5 Samuel Pitoiset 2019-05-02 12:57:53 UTC
Actually, the correct fix should be https://patchwork.freedesktop.org/series/60204/

It fixes the GPU hang on my Vega20.
Comment 6 Samuel Pitoiset 2019-05-02 13:56:23 UTC
Should be fixed with https://cgit.freedesktop.org/mesa/mesa/commit/?id=08be23bfdec9fb447c58ae48bf9cc1b91ecba128

Thanks for the great report.
Comment 7 Peter 2019-05-02 17:30:58 UTC
I can't reproduce the hang anymore with latest Mesa. Thanks for your help.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.